--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         </div>
     </nav>
 
-    <div id="mobile-menu" class="hidden flex-col gap-4 px-6 py-4 bg-[#15803D] text-white md:hidden">
-        <h3 class="cursor-pointer">About</h3>
-        <h3 class="cursor-pointer">Gallery</h3>
-        <h3 class="cursor-pointer">Plant a Tree</h3>
-        <br>
-        <button class="bg-[#FACC15] text-[#15803D] px-4 py-2 rounded-full w-full">Plant a Tree</button>
+    <div id="mobile-menu" class="hidden">
+        <div class="flex-col gap-4 px-6 py-4 bg-[#15803D] text-white md:hidden">
+            <h3 class="cursor-pointer">About</h3>
+            <h3 class="cursor-pointer">Gallery</h3>
+            <h3 class="cursor-pointer">Plant a Tree</h3>
+            <br>
+            <button class="bg-[#FACC15] text-[#15803D] px-4 py-2 rounded-full w-full">Plant a Tree</button>
+        </div>
     </div>
 
     <!-- Banner -->
@@ -88,23 +90,100 @@
     </div>
 
     <!-- Card Modal -->
-    <div id="plant-modal"
-        class="fixed inset-0 backdrop-blur-xl bg-opacity-50 flex justify-center hidden items-center z-50">
+    <div id="plant-modal" class="fixed inset-0 backdrop-blur-xl bg-opacity-50 justify-center flex items-center z-50">
         <div class="bg-white rounded-lg p-6 max-w-lg w-full relative flex flex-col gap-4">
             <h2 id="modal-name" class="text-xl font-bold mb-2 text-center"></h2>
             <img id="modal-image" src="" alt="" class="w-full h-70 object-cover rounded-3xl mb-4 p-4">
-            <span id="modal-category"
-                class="bg-green-600 text-white px-3 py-1 rounded-full mb-2 inline-block text-center"></span>
-            <p id="modal-price" class="font-semibold text-gray-800 mt-2 text-center"></p>
+            <div class="flex justify-between">
+                <span id="modal-category"
+                    class="bg-green-600 text-white px-3 py-1 rounded-full mb-2 inline-block text-center"></span>
+                <p id="modal-price" class="font-semibold text-gray-800 mt-2 text-center"></p>
+            </div>
             <p id="modal-description" class="text-gray-700 mb-2 text-center"></p>
             <!-- Only close button -->
-            <button id="modal-close"
-                class="bg-red-500 text-white px-4 py-2 rounded-full mt-4 self-center hover:bg-red-600">
+            <button id="modal-close" class="bg-red-500 text-white px-4 py-2 rounded-full mt-2 hover:bg-red-600">
                 Close
             </button>
         </div>
     </div>
 
+    <section>
+        <div class="max-w-6xl mx-auto px-4 py-12">
+            <h1 class="text-3xl font-bold text-center mb-10 mt-20">About the Campaign</h1>
+
+            <div class="flex flex-col md:flex-row items-center gap-10">
+
+                <div class="w-full md:w-1/2 flex justify-center">
+                    <img class="rounded-lg shadow-md" src="assets/about.png" alt="" />
+                </div>
+
+                <div class="w-full md:w-1/2">
+                    <p class="mb-4">Green Earth is a global tree plantation initiative dedicated to fighting climate
+                        change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign,
+                        you help restore forests, create habitats for wildlife, and combat global warming.</p>
+                    <ul class="list-disc list-inside space-y-2">
+                        <li>Restoration of natural habitats</li>
+                        <li>Improvement of air quality</li>
+                        <li>Support for local communities</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-green-100 py-16">
+        <div class="max-w-6xl mx-auto px-4">
+            <h2 class="text-2xl font-bold text-center text-gray-800 mb-12">Our Impact</h2>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+
+                <div
+                    class="cursor-pointer bg-white rounded-lg shadow-sm p-6 hover:bg-green-200 hover:scale-105 transform transition duration-200">
+                    <h3 class="text-2xl font-bold text-green-600">500K+</h3>
+                    <p class="text-sm text-gray-600 mt-2">Trees Planted</p>
+                </div>
+
+                <div
+                    class="cursor-pointer bg-white rounded-lg shadow-sm p-6 hover:bg-green-200 hover:scale-105 transform transition duration-200">
+                    <h3 class="text-2xl font-bold text-green-600">120+</h3>
+                    <p class="text-sm text-gray-600 mt-2">Communities Involved</p>
+                </div>
+
+                <div
+                    class="cursor-pointer bg-white rounded-lg shadow-sm p-6 hover:bg-green-200 hover:scale-105 transform transition duration-200">
+                    <h3 class="text-2xl font-bold text-green-600">30+</h3>
+                    <p class="text-sm text-gray-600 mt-2">Countries Reached</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-green-800 py-20">
+        <div class="max-w-md mx-auto text-center">
+            <h2 class="text-white text-2xl font-semibold mb-8">Plant a Tree Today</h2>
+
+            <form class="bg-green-700 rounded-lg p-6 space-y-4">
+                <input type="text" placeholder="Your Name" class="w-full px-4 py-2 rounded-md bg-white" />
+                <input type="email" placeholder="Your Email Address" class="w-full px-4 py-2 rounded-md bg-white" />
+                <select class="w-full px-4 py-2 rounded-md bg-white">
+                    <option disabled selected>Number of Trees</option>
+                    <option>1 Trees - $5</option>
+                    <option>5 Trees - $25</option>
+                    <option>10 Trees - $50</option>
+                </select>
+                <button type="submit"
+                    class="w-full bg-yellow-400 text-green-700 font-semibold py-2 rounded-full">
+                    Donate Now
+                </button>
+            </form>
+        </div>
+    </section>
+
+    <footer class="flex justify-center bg-[#14532D] p-3">
+        <div>
+            <h1 class="text-white">&copy; 2025 Green Earth. All Rights Reserved</h1>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 
